--- a/style.css
+++ b/style.css
@@ -60,12 +60,11 @@ li {
   width: 144px;
   height: 360px;
   margin-right: 16px;
-  border: 2.2px solid #9D4FFF;
-  box-shadow: 0px 4px 16px 12px rgba(136, 51, 243, 0.1);
+  border: 2.2px solid rgba(157, 79, 255, 0.4);
   border-radius: 20px;
   padding: 30px 13px 24px 13px;
   background-image: url(rectangleblack.svg);
-  transition: 0.2s;
+  transition: 0.6s;
 }
 
 .contenttwo {
@@ -114,7 +113,7 @@ ul a {
   border: 1.5px solid transparent;
   border-radius: 15px;
   display: none;
-  background:linear-gradient(#221834, #221834) padding-box,
+  background:linear-gradient(#43116C, #43116C) padding-box,
   linear-gradient(
     90deg,
     #f9a512,
@@ -156,6 +155,8 @@ li:hover {
   width: 360px;
   justify-content: space-between;
 background:linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 77.6%), url(rectanglepurple.svg);
+border: 2.2px solid #9D4FFF;
+box-shadow: 0px 4px 16px 12px rgba(136, 51, 243, 0.1);
 }
 .contenttwo:hover {
   background-position: 0 0;
