--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
   padding: 0;
 }
 
-
 .service {
   display: flex;
   flex-direction: column;
@@ -64,7 +63,7 @@ li {
   border-radius: 20px;
   padding: 30px 13px 24px 13px;
   background-image: url(rectangleblack.svg);
-  transition: 0.6s;
+  transition: 0.2s;
 }
 
 .contenttwo {
@@ -109,7 +108,6 @@ li {
 ul a {
   width: 320px;
   height: 56px;
-/* align-self: center; */
   border: 1.5px solid transparent;
   border-radius: 15px;
   display: none;
@@ -122,6 +120,28 @@ ul a {
     #9d4fff
   ) border-box;
   text-decoration: none;
+}
+
+.secondbutton {
+  background:linear-gradient(#2A034C, #2A034C) padding-box,
+  linear-gradient(
+    90deg,
+    #f9a512,
+    #d24f26 34.16%,
+    #a440a9 70.31%,
+    #9d4fff
+  ) border-box;
+}
+
+.thirdbutton {
+  background:linear-gradient(#2D1C34, #2D1C34) padding-box,
+  linear-gradient(
+    90deg,
+    #f9a512,
+    #d24f26 34.16%,
+    #a440a9 70.31%,
+    #9d4fff
+  ) border-box;
 }
 
 ul span {
